--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -1,1 +1,34 @@
 @import "bootstrap/scss/bootstrap";
+
+h1,
+h2,
+h3,
+h4,
+p ,
+a{
+  padding: 0px;
+  margin: 0px;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.input-group-text {
+   
+  background-color: #fff;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border: 2px solid rgb(120, 120, 120);
+  border-right: 0px;
+}
+.form-control {
+   
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
+  -ms-border-radius: 50px;
+  -o-border-radius: 50px;
+  border: 2px solid rgb(120, 120, 120);
+  border-left: 0px;
+}
