Obtencion de datos de la api realizada con fetch

--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -12,7 +12,8 @@ a{
 }
 
 .input-group-text {
-   
+   font-size: 25px;
+   font-family: "Ubuntu", sans-serif;
   background-color: #fff;
   border-radius: 50px;
   -webkit-border-radius: 50px;
@@ -23,7 +24,8 @@ a{
   border-right: 0px;
 }
 .form-control {
-   
+  font-size: 25px;
+  font-family: "Ubuntu", sans-serif;
   border-radius: 50px;
   -webkit-border-radius: 50px;
   -moz-border-radius: 50px;
