--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -11,6 +11,9 @@ a{
   font-family: "Ubuntu", sans-serif;
 }
 
+
+//TODO: Estas clases modifican el input-search de bootstrap de la página de búsqueda
+
 .input-group-text {
    font-size: 25px;
    font-family: "Ubuntu", sans-serif;
