Finalizado el detalle de una pelicula

--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -37,3 +37,14 @@ a{
   border: 2px solid rgb(120, 120, 120);
   border-left: 0px;
 }
+
+
+.btn-secondary{
+  background-color: #535b61;
+  border: 1px solid #535b61;
+}
+.btn-light{
+  background-color: #86B8D2;
+  border: 1px solid #86B8D2;
+}
+
