--- a/src/movies/styles/DetailePage.css
+++ b/src/movies/styles/DetailePage.css
@@ -11,19 +11,14 @@
 }
 
 .movieInfoTitle h1{
-    color: white;
+    color: #FD4848;
     font-size: 35px;
 }
 
 
- .moviePrimaryButton {
-    background-color: #141414 !important;
-    color: white !important;
-    border: solid 2px rgb(65, 65, 65) !important;
-    margin-left: 7px;
-}
+
 .movieLine{
-    border-color:white;
+    border-color:#03050f;
     width: 100%;
 }
 
@@ -34,7 +29,12 @@
 .movieCard{
     display: flex;
     flex-direction: row;
-    color: white;
+    color: #03050f;
+}
+.movieButtonCollection{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
 }
 
 .movieCard .movieImageInfo{
@@ -68,18 +68,22 @@
 }
 
 .movieCard .movieDetailInfo .movieInfoText{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
     margin-top: 10px;
-    color: rgb(133, 133, 133);
+    color: rgb(84, 84, 84);
 }
 .movieCard .movieDetailInfo .movieInfoCharacteristics h1{
     font-size: 30px;
     margin: 0;
     margin-bottom: 10px;
-    color: white;
+    color: #03050f;
     text-align: start;
 }
 .movieCard .movieDetailInfo .movieInfoCharacteristics{
-    color: rgb(133, 133, 133);
+    color: rgb(84, 84, 84);
 }
 
 .movieDetailInfo .movieSecondaryDetails{
@@ -102,7 +106,7 @@
     font-size: 30px;
     margin: 0;
     margin-bottom: 10px;
-    color: white;
+    color:#03050f;
     text-align: start;
 }
 .movieCard .movieDetailInfo .movieAditionalDetails p{
@@ -114,7 +118,7 @@
 
 .movieCard .movieDetailInfo .movieAditionalDetails span{
     margin-left: 20px;
-    color: rgb(133, 133, 133);
+    color: rgb(84, 84, 84);
 }
 
 .movieBack{
@@ -125,7 +129,7 @@
     gap: 10px;
 }
 .movieBack h2{
-    color: white;
+    color: #03050f;
     font-size: 20px;
     margin: 0;
 }
