--- a/src/movies/styles/Loader.css
+++ b/src/movies/styles/Loader.css
@@ -4,6 +4,16 @@
     justify-content: center;
     margin-top: 50px;
 }
+.loader__container_vs2{
+  display: flex;
+    flex-direction: column;
+    justify-content: center;
+  position: absolute;
+  transform: translateZ(0);
+  z-index: 5;
+  top: 50%;
+  left: 50%;
+}
 
 .loader, .loader:before, .loader:after {
     border-radius: 50%;
