--- a/src/movies/styles/DetailePage.css
+++ b/src/movies/styles/DetailePage.css
@@ -136,3 +136,73 @@
 .movieBack .mySearchLogOut {
     background-color: #141414 !important;
 }
+
+
+.movieInfo__characters__title{
+    font-size: 30px;
+    margin: 0;
+    margin-bottom: 40px;
+    color: #03050f;
+    text-align: start;
+}
+.movieInfo__characters__collection{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 25px;
+}
+.movieInfo__characters__collection__character{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.movieInfo__characters__collection__character--img{
+    position: relative;
+}
+.movieInfo__characters__collection__character--icon{
+    width: 50px;
+    height: 50px;
+    /* background-color: #ffc107; */
+    position: absolute;
+    top: -15px;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.movieInfo__characters__collection__character--icon p{
+    font-weight: 500;
+    color: white;
+    font-size: 25px;
+}
+.movieInfo__characters__collection__character--img img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.movieInfo__characters__collection__character--name{
+    color:#03050f;
+    /* color: blue; */
+    margin-top: 10px;
+    font-weight: 500;
+}
+.movieInfo__characters__collection__character--img:hover{
+   
+    -webkit-animation: shakeY 1s;
+    animation: shakeY 1s;
+}
+.movieInfo__characters__collection__character--a{
+    text-decoration: none;
+}
