Finalizado la carta detalle del caracter seleccionado

--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -48,3 +48,9 @@ a{
   border: 1px solid #86B8D2;
 }
 
+.btn-light{
+  color: white;
+  background-color: #ffffff00;
+  border: none;
+  font-size: 30px;
+}
