--- a/src/movies/styles/CharacterPage.css
+++ b/src/movies/styles/CharacterPage.css
@@ -22,7 +22,15 @@
    
     
 }
-
+.characterInfo__primary__logo--onepiece{
+    position: absolute;
+    width: 300px;
+    opacity: 0.1;
+    filter: grayscale(100%);
+    bottom: -80px;
+    right:  -80px;
+    z-index: 0;
+}
 .characterInfo__primary__aqua--type{
     position: absolute;
     width: 300px;
