--- a/src/sass/customBoostrap.scss
+++ b/src/sass/customBoostrap.scss
@@ -43,7 +43,7 @@ a{
   background-color: #535b61;
   border: 1px solid #535b61;
 }
-.btn-light{
+.btn-info{
   background-color: #86B8D2;
   border: 1px solid #86B8D2;
 }
