Finalizado el modo responsivo para la pagina de detalle

--- a/src/ui/styles/OPnavbar.scss
+++ b/src/ui/styles/OPnavbar.scss
@@ -1,7 +1,10 @@
 @import "../../sass/responsiveStyles";
 .navbar__container {
   display: flex;
+ 
   flex-direction: row;
+  
+  z-index: 50;
   @include tablet {
     gap: 30px;
     padding: 20px 20px;
@@ -11,6 +14,19 @@
     gap: 70px;
     padding: 20px 100px;
     justify-content: flex-start;
+  }
+}
+.navbar__container.nav-sticky {
+  transition: 1s;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: black !important;
+  @include tablet {
+    padding: 10px 20px;
+  }
+  @include desktop {
+    padding: 10px 100px;
   }
 }
 .navbar__container__link {
