--- a/src/movies/styles/CharacterPage.scss
+++ b/src/movies/styles/CharacterPage.scss
@@ -1,43 +1,72 @@
+@import "../../sass/responsiveStyles";
 .characterContent{
-    margin: 50px;
+    
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
+    @include tablet {
+        margin: 30px;
+      }
+      @include desktop {
+        margin: 50px;
+      }
 }
 .characterInfo{
-    width: 40%;
+   
     overflow: hidden;
     border-radius: 40px;
     -webkit-border-radius: 40px;
     -moz-border-radius: 40px;
     -ms-border-radius: 40px;
     -o-border-radius: 40px;
+    @include tablet {
+        width: 100%;
+      }
+      @include desktop {
+        width: 40%;
+      }
 }
 .characterInfo__primary{
     display: flex;
     flex-direction: column;
-    padding: 40px 20px 0px 20px;
+    
     position: relative;
-   
+    @include tablet {
+        padding: 20px 20px 0px 20px;
+      }
+      @include desktop {
+        padding: 40px 20px 0px 20px;
+      }
     
 }
 .characterInfo__primary__logo--onepiece{
     position: absolute;
-    width: 300px;
+   
     opacity: 0.1;
     filter: grayscale(100%);
     bottom: -80px;
     right:  -80px;
     z-index: 0;
+    -webkit-filter: grayscale(100%);
+    @include tablet {
+        width: 250px;
+      }
+      @include desktop {
+        width: 300px;
+      }
 }
 .characterInfo__primary__aqua--type{
     position: absolute;
-    width: 300px;
     opacity: 0.1;
     top: -50px;
     left:  -40px;
     z-index: 0;
+    @include tablet {
+        width: 200px;
+      }
+      @include desktop {
+        width: 300px;
+      }
 }
 
 .characterInfo__primary__header{
@@ -59,13 +88,24 @@
 }
 .characterInfo__primary__nav__info--name{
     color: #ffffff;
-    font-size: 40px;
+   
     font-weight: 700;
+    @include tablet {
+        font-size: 30px;
+      }
+      @include desktop {
+        font-size: 40px;
+      }
 }
 .characterInfo__primary__nav__number{
     color: #ffffff;
-    font-size: 20px;
     font-weight: 500;
+    @include tablet {
+        font-size: 18px;
+      }
+      @include desktop {
+        font-size: 20px;
+      }
 }
 
 .characterInfo__primary__nav__info__types{
@@ -83,14 +123,20 @@
     position: relative;
 }
 .characterInfo__primary--img--hiden{
-    width: 350px;
-    height: 350px;
+  
     visibility: hidden;
+    @include tablet {
+        width: 250px;
+        height: 250px;
+      }
+      @include desktop {
+        width: 350px;
+        height: 350px;
+      }
 }
 .characterInfo__primary--img--real{
     border-radius: 50%;
-    width: 350px;
-    height: 350px;
+   
     position: absolute;
     bottom: -30px;
     z-index: 25;
@@ -98,6 +144,14 @@
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
     -o-border-radius: 50%;
+    @include tablet {
+        width: 250px;
+        height: 250px;
+      }
+      @include desktop {
+        width: 350px;
+        height: 350px;
+      }
 }
 
 
@@ -105,13 +159,19 @@
 .characterInfo__secondary{
     background-color: #f6f6f6;
     border-radius: 40px;
-    padding: 50px 20px;
+    
     position: relative;
     z-index: 0;
     -webkit-border-radius: 40px;
     -moz-border-radius: 40px;
     -ms-border-radius: 40px;
     -o-border-radius: 40px;
+    @include tablet {
+        padding: 30px 10px;
+      }
+      @include desktop {
+        padding: 50px 20px;
+      }
 }
 .characterInfo__secondary__tab{
     padding: 20px;
@@ -119,27 +179,60 @@
 .characterInfo__secondary__tab__form{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+   
     margin-top: 20px;
     margin-bottom: 20px;
+    @include tablet {
+        gap: 20px;
+      }
+      @include desktop {
+        gap: 10px;
+      }
 }
 .characterInfo__secondary__tab__form__line{
     display: flex;
-    flex-direction: row;
-    align-items: center;
+   
+    
     width: 100%;
+    @include tablet {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      @include desktop {
+        flex-direction: row;
+        align-items: center;
+      }
 }
 .characterInfo__secondary__tab__form__line h3{
     color: #3c3c3c;
-    font-size: 13px;
+    
     font-weight: 500;
-    width: 20%;
+   
+    @include tablet {
+        font-size: 16px;
+        width: 100%;
+        margin-bottom: 10px;
+      }
+      @include desktop {
+        font-size: 13px;
+        width: 20%;
+        margin-top: 0px;
+
+      }
 }
 .characterInfo__secondary__tab__form__line p{
     color: #000000;
-    font-size: 13px;
+    
     font-weight: 500;
-    width: 80%;
+  
+    @include tablet {
+        font-size: 15px;
+        width: 100%;
+      }
+      @include desktop {
+        font-size: 13px;
+        width: 80%;
+      }
 
 }
 .characterInfo__secondary__tab__form__line a{
